fix: up button now visible only on mobile

--- a/homeworks/ivan-poberezhniuk/04-html-css-2/1-cv/styles/media.css
+++ b/homeworks/ivan-poberezhniuk/04-html-css-2/1-cv/styles/media.css
@@ -65,4 +65,8 @@
   .side__toggle:checked ~ .side-list__outer {
     display: block;
   }
+
+  .scroll-to-top {
+    display: block;
+  }
 }
