--- a/homeworks/ivan-poberezhniuk/04-html-css-2/1-cv/styles/scroll-to-top.css
+++ b/homeworks/ivan-poberezhniuk/04-html-css-2/1-cv/styles/scroll-to-top.css
@@ -1,4 +1,5 @@
 .scroll-to-top {
+  display: none;
   height: 3rem;
   width: 3rem;
   z-index: 333;
